styles.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100dvh;
    width: 100vw;
    background-color: rgb(226, 226, 226);
}

main {
    display: flex;
    flex-direction: column;
    width: 330px;
    border: 1px solid black;
    background-color: #192a3b;
    box-shadow: 3px 4px 3px 3px black;
    outline: 3px solid #f69d3c;
    border-radius: 2%;
}

#clear {
    letter-spacing: 1px;
    text-indent: -2px;
}

#display {
    font-family: 'Courier New', Courier, monospace;
    font-weight: 600;
    border: 8px solid black;
    color: lightgoldenrodyellow;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
    margin: 10px 10px 0px 10px;
    outline: 2px solid silver;
    text-align: right;
    gap: 2px;

    #result, #expression {
        white-space: nowrap;
    }
}

#backspace {
    text-indent: -1px;
}

#spacer {
    background: repeating-linear-gradient(-45deg,
            #f69d3c,
            #f69d3c 2px,
            transparent 2px,
            transparent 10px);
    width: 100%;
    height: 7px;
    border: 1px dashed f69d3c;
}

#result {
    font-size: 33px;
    border: 1px dashed #f69d3c;
    width: 100%;
    max-height: 45px;
    min-height: 45px;
    overflow-x: scroll;
    overflow-y: hidden;
    scrollbar-width: thin;
}

#expression {
    border: 1px dashed #f69d3c;
    width: 100%;
    min-height: 30px;
    max-height: 30px;
    overflow-x: scroll;
    overflow-y: hidden;
    scrollbar-width: thin;
}

button {
    padding: 20px;
    border-radius: 25%;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-weight: 800;
    font-size: 30px;
    max-width: 90px;
    max-height: 90px;
    flex: 0 0 auto;
    width: 70px;
    aspect-ratio: 1;
    color: #192a3b;
}

#top-buttons {
    display: flex;
    justify-content: center;
    gap: 10px;
    margin-bottom: 10px;

    button {
        width: 95px;
        margin-top: 10px;
        border-radius: 15%;
        max-width: initial;
        text-align: center;
        aspect-ratio: initial;
    }

    & button:hover {
        background: radial-gradient(lightgoldenrodyellow, #f8f0e1 95%, #295f00 100%);
    }
}

#main-pad {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: 10px;
}

#num-pad {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    text-align: center;
    gap: 10px;
    margin-bottom: 10px;

    button {
        background: radial-gradient(ellipse, #d0e4ec 0%, #f69d3c 93%, #b0610da4 97%, #f69c3ca4 100%);
        background-size: 4rem;
    }

    & button:hover {
        background: radial-gradient(lightgoldenrodyellow, #f8f0e1 95%, #295f00 100%);
    }

}

#op-pad {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-right: 10px;
    margin-bottom: 10px;

    & button:hover {
        background: radial-gradient(lightgoldenrodyellow, #f8f0e1 95%, #295f00 100%);
    }
}

.colored button {
    background: radial-gradient(ellipse, #ebf8e1 30%, #d0e4ec 90%, #b9dfef, #b9dfef 97%, #053447 100%);
}

#num-pad>button:last-of-type {
    font-weight: 900;
    font-size: 35px;
    padding: 18px 20px 17px 20px;
    background: radial-gradient(ellipse, #ebf8e1 0%, #d0e4ec 38%, #f69d3c 95%, #b0610da4 97%, #f69c3ca4 100%);
}

#num-pad>button:last-of-type:hover {
    background: radial-gradient(lightgoldenrodyellow, #f8f0e1 95%, #295f00 100%);

}

